# parsec

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SETUP.md  test_plan.md
crates/classifier/: Cargo.toml
crates/classifier/py/: classifier.py  requirements.txt
crates/classifier/src/: huggingface.rs  lib.rs  python.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: google_ai.rs  lib.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
docs/: ARCHITECTURE.md  CLASSIFIER.md  CONTEXT_MANAGEMENT.md  PROMPT_HANDLING.md  SECURITY.md
