[package]
name = "parsec-classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
parsec-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
