[package]
name = "parsec-model"
version = "0.1.0"
edition = "2021"

[dependencies]
parsec-core = { path = "../core" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
