[package]
name = "parsec-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parsec"
path = "src/main.rs"

[dependencies]
parsec-core = { path = "../core" }
parsec-classifier = { path = "../classifier" }
parsec-model = { path = "../model" }
parsec-prompt = { path = "../prompt" }
parsec-executor = { path = "../executor" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
dotenvy = "0.15"
